--- a/Inkscape/Inkscapes nybörjarguide/grouping.po
+++ b/Inkscape/Inkscapes nybörjarguide/grouping.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-13 20:29+0200\n"
+"PO-Revision-Date: 2025-09-02 16:13+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -35,7 +35,7 @@ msgid ""
 "+ :kbd:`G`, :menuselection:`Object --> Group`"
 msgstr ""
 "|Icon for Grouping| :kbd:`Shift` + :kbd:`Ctrl` + :kbd:`U` eller :kbd:`Ctrl` "
-"+ :kbd:`G`, :menuselection:`Object --> Group`"
+"+ :kbd:`G`, :menuselection:`Objekt --> Gruppera`"
 
 #: ../../source/grouping.rst:83 5bb35f9f4e54404cb663ecdf4348e142
 msgid "Icon for Grouping"
@@ -43,7 +43,7 @@ msgstr "Ikon för gruppering"
 
 #: ../../source/grouping.rst:9 63d664479b3c422ca0d03d6a140fad76
 msgid "**Ungrouping**"
-msgstr "**Ungruppering**"
+msgstr "**Avgruppering**"
 
 #: ../../source/grouping.rst:11 97e31b8c35ed48f3aa1b372b34dfb809
 msgid ""
@@ -51,7 +51,7 @@ msgid ""
 "+ :kbd:`U`, :menuselection:`Object --> Ungroup`"
 msgstr ""
 "|Icon for Ungrouping| :kbd:`Shift` + :kbd:`Ctrl` + :kbd:`G` eller :kbd:`Ctrl` "
-"+ :kbd:`U`, :menuselection:`Object --> Ungroup`"
+"+ :kbd:`U`, :menuselection:`Objekt --> Avgruppera`"
 
 #: ../../source/grouping.rst:85 7e55dac21a614b17a1eebb0899e84518
 msgid "Icon for Ungrouping"
@@ -69,10 +69,10 @@ msgstr ""
 "**Gruppering** gör att du kan arbeta med flera objekt som ett enda objekt: "
 "alla ändringar du gör påverkar alla medlemmar i gruppen på samma sätt, och "
 "hela gruppen kan kopieras, dupliceras eller klonas som en enhet. Om du "
-"grupperar dina objekt kan det hjälpa dig att hålla ordning på din canvas; om "
-"du till exempel har placerat flera former i en jämn och fin rad kan du "
-"gruppera dem så att ingen av dem blir förskjuten. Grupper kan också nästlas "
-"inom andra grupper."
+"grupperar dina objekt kan det hjälpa dig att hålla ordning på din duk; om du "
+"till exempel har placerat flera former i en jämn och fin rad kan du gruppera "
+"dem så att ingen av dem blir förskjuten. Grupper kan också nästlas inom andra "
+"grupper."
 
 #: ../../source/grouping.rst:16 3a6a96527cb147b7a5c9f856acf2d2d9
 msgid "Adding objects to a group"
@@ -97,8 +97,8 @@ msgid ""
 "bar, :menuselection:`Object` menu or keyboard shortcut:"
 msgstr ""
 "Eftersom vi inte vill att ögonen ska komma i otakt bör vi gruppera dem. "
-"Markera båda objekten och välj sedan Group från kommandofältet, "
-"menyn :menuselection:`Object` eller tangentbordsgenvägen:"
+"Markera båda objekten och välj sedan Gruppera från kommandofältet, "
+"menyn :menuselection:`Objekt` eller tangentbordsgenvägen:"
 
 #: ../../source/grouping.rst:26 9daaea02f3d446689359a2ef771331fd
 msgid "sequential images of two ovals being grouped"
@@ -133,7 +133,7 @@ msgid ""
 "When you **Enter** a group, you gain the ability to select and manipulate its "
 "elements freely. To Enter a group you can either:"
 msgstr ""
-"När du **Enter** en grupp får du möjlighet att välja och manipulera dess "
+"När du **går in i** en grupp får du möjlighet att välja och manipulera dess "
 "element fritt. För att gå in i en grupp kan du antingen:"
 
 #: ../../source/grouping.rst:43 edb950c69f1f43e8b898b57b84f33a82
@@ -145,7 +145,8 @@ msgid ""
 "Right-click on it and select :menuselection:`Enter group` from the dropdown "
 "menu."
 msgstr ""
-"Högerklicka på den och välj :menuselection:`Enter group` från rullgardinsmenyn."
+"Högerklicka på den och välj :menuselection:`Gå in i gruppen` från "
+"rullgardinsmenyn."
 
 #: ../../source/grouping.rst:45 c6e9f65b388849baa19a871b5c5d6669
 msgid "Left-click once on the group and press :kbd:`Ctrl` + :kbd:`Enter`"
@@ -176,13 +177,13 @@ msgid ""
 "Right-click on the group and select :menuselection:`Go to parent` from the "
 "dropdown menu."
 msgstr ""
-"Högerklicka på gruppen och välj :menuselection:`Go to parent` från "
+"Högerklicka på gruppen och välj :menuselection:`Gå till förälder` från "
 "rullgardinsmenyn."
 
 #: ../../source/grouping.rst:53 256f5c16778846b0af7d41e0835aa4ef
 msgid "Left-click once on the group and press :kbd:`Ctrl` + :kbd:`Backspace`"
 msgstr ""
-"Vänsterklicka en gång på gruppen och tryck på :kbd:`Ctrl` + :kbd:`Backspace`"
+"Vänsterklicka en gång på gruppen och tryck på :kbd:`Ctrl` + :kbd:`Backsteg`"
 
 #: ../../source/grouping.rst:55 48ef340cd99247d1b0cf708aedc69075
 msgid ""
@@ -194,7 +195,7 @@ msgstr ""
 "Observera att det inte finns någon indikator på skärmen som visar vilken grupp "
 "du befinner dig i (förutom återkopplingen av vilka objekt du kan och inte kan "
 "välja individuellt). För att hitta den informationen, titta i statusfältet "
-"eller i dialogen Objects (:menuselection:`Object --> Objects...`)"
+"eller i dialogen Objekt (:menuselection:`Objekt --> Objekt...`)"
 
 #: ../../source/grouping.rst:58 0a46c69b3f334067a226f99fa9559b85
 msgid "Manipulating objects without entering a group"
@@ -237,9 +238,9 @@ msgid ""
 msgstr ""
 "Om det objekt du vill välja ligger \"under\" ett annat objekt, kommer "
 "upprepade tryckningar på :kbd:`Ctrl` + :kbd:`Alt` + vänsterklick att gå igenom "
-"ALLA objekt på den platsen (högt till lågt i z-ordning). Att ha fliken Object "
-"Properties öppen ( :kbd:`Shift` + :kbd:`Ctrl` + :kbd:`O` ) kan hjälpa dig att "
-"hålla reda på vilket objekt du för närvarande har valt."
+"ALLA objekt på den platsen (högt till lågt i z-ordning). Att ha fliken "
+"Objektegenskaper öppen ( :kbd:`Shift` + :kbd:`Ctrl` + :kbd:`O` ) kan hjälpa "
+"dig att hålla reda på vilket objekt du för närvarande har valt."
 
 #: ../../source/grouping.rst:67 03857ae32eff41398f11690aa1513637
 msgid "Removing objects from a group"
@@ -255,22 +256,23 @@ msgstr ""
 
 #: ../../source/grouping.rst:70 df1056ab9796414a9c2fbe156fa42753
 msgid "To disslingd (\"ungroup\") a group, you can either:"
-msgstr "För att upplösa (\"ungroup\") en grupp kan du antingen:"
+msgstr "För att upplösa (“avgruppera”) en grupp kan du antingen:"
 
 #: ../../source/grouping.rst:72 49834fafab794f64b4b816ada1019750
 msgid ""
 "Select the group and choose :menuselection:`Object --> Ungroup` from the menu "
 "bar or the Ungroup icon from the commands bar"
 msgstr ""
-"Markera gruppen och välj :menuselection:`Object --> Ungroup` från menyraden "
-"eller Ungroup-ikonen från kommandoraden"
+"Markera gruppen och välj :menuselection:`Objekt --> Avgruppera` från menyraden "
+"eller Avgruppera-ikonen från kommandofältet"
 
 #: ../../source/grouping.rst:73 af8b1a5da5104714b4c2c39810f32885
 msgid ""
 "Right-click on the group and choose :menuselection:`Ungroup` from the dropdown "
 "menu"
 msgstr ""
-"Högerklicka på gruppen och välj :menuselection:`Ungroup` från rullgardinsmenyn"
+"Högerklicka på gruppen och välj :menuselection:`Avgruppera` från "
+"rullgardinsmenyn"
 
 #: ../../source/grouping.rst:75 8b3bc55e7b03471b86577846eeefed33
 msgid ""
@@ -278,25 +280,25 @@ msgid ""
 "want to extract only a single item while leaving the rest of the group in "
 "place, you need to first **Enter** the group. Then, either:"
 msgstr ""
-"Ungrouping returnerar **alla** objekt i gruppen till nästa nivå uppåt. Om du "
+"Avgruppering returnerar **alla** objekt i gruppen till nästa nivå uppåt. Om du "
 "bara vill extrahera ett enda objekt och låta resten av gruppen vara kvar, "
-"måste du först **Gå in** i gruppen. Sedan kan du antingen:"
+"måste du först **Gå in i** gruppen. Sedan kan du antingen:"
 
 #: ../../source/grouping.rst:77 e902ee7dc0ca4579b4c65d7c31ed7371
 msgid ""
 "Select the object you wish to extract and choose :menuselection:`Object --> "
 "Pop Selected Objects out of Group` from the menu bar"
 msgstr ""
-"Markera det objekt som du vill extrahera och välj :menuselection:`Object --> "
-"Pop Selected Objects out of Group` från menyraden"
+"Markera det objekt som du vill extrahera och välj :menuselection:`Objekt --> "
+"Plocka ut valda objekt ur gruppen` från menyraden"
 
 #: ../../source/grouping.rst:78 c40889c29d8141f884401d4d4387774c
 msgid ""
 "Right-click on the object and choose :menuselection:`Pop selection out of "
 "group` from the dropdown menu"
 msgstr ""
-"Högerklicka på objektet och välj :menuselection:`Pop selection out of group` "
-"från rullgardinsmenyn"
+"Högerklicka på objektet och välj :menuselection:`Plocka ut markering ur "
+"gruppen` från rullgardinsmenyn"
 
 #: ../../source/grouping.rst:80 dafea1bb30af4f25b46b842744a749f7
 msgid ""
