--- a/Inkscape/Inkscapes nybörjarguide/palette.po
+++ b/Inkscape/Inkscapes nybörjarguide/palette.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 18:30+0200\n"
+"PO-Revision-Date: 2025-09-02 16:26+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -31,7 +31,7 @@ msgstr "Längst ner i Inkscape-fönstret hittar du **färgpaletten**."
 
 #: ../../source/palette.rst:7 96e11151830440cc8ba2aed7e851d92f
 msgid "The quickest way to apply a color to an object is to:"
-msgstr "Det snabbaste sättet att applicera en färg på ett objekt är att:"
+msgstr "Det snabbaste sättet att tillämpa en färg på ett objekt är att:"
 
 #: ../../source/palette.rst:9 ../../source/palette.rst:19
 #: 06eeaeb350e54819b5a8da5d0554bfed b6bf1fed969048838f63b188e4a6c0ec
@@ -44,7 +44,7 @@ msgstr "**Vänsterklicka** på den färg du vill ha i paletten."
 
 #: ../../source/palette.rst:11 0fa5e0a6594a46ea873c371f862e03af
 msgid "The color will be immediately applied to your object."
-msgstr "Färgen kommer omedelbart att appliceras på ditt objekt."
+msgstr "Färgen kommer omedelbart att tillämpas på ditt objekt."
 
 #: ../../source/palette.rst:13 61b600ddba3b40e08da9e2412bbd4201
 msgid ""
@@ -59,7 +59,7 @@ msgid ""
 "Each vector object can have a stroke color and a fill color. To apply a color "
 "to the stroke:"
 msgstr ""
-"Varje vektorobjekt kan ha en strokefärg och en fyllnadsfärg. För att applicera "
+"Varje vektorobjekt kan ha en streckfärg och en fyllnadsfärg. För att tillämpa "
 "en färg på strecket:"
 
 #: ../../source/palette.rst:20 7290bd3c061343c6bae903c87e117385
@@ -69,7 +69,7 @@ msgstr "Håll ned :kbd:`Shift` och **vänsterklicka** på det färgfält du vill
 
 #: ../../source/palette.rst:22 6139d4444cdb4041892c767e9d23fed5
 msgid "The color will immediately be applied to the object's stroke."
-msgstr "Färgen kommer omedelbart att appliceras på objektets stroke."
+msgstr "Färgen kommer omedelbart att tillämpas på objektets streck."
 
 #: ../../source/palette.rst:24 586c1a751f434294bc285918e7284094
 msgid ""
@@ -124,8 +124,8 @@ msgid ""
 "path indicated under :guilabel:`User palettes`."
 msgstr ""
 "Kontrollera sedan var Inkscape letar efter anpassade palettfiler. För detta, "
-"gå till :menuselection:`Edit --> Preferences --> System`, och notera slingan "
-"som anges under :guilabel:`User palettes`."
+"gå till :menuselection:`Redigera --> Inställningar --> System`, och notera "
+"slingan som anges under :guilabel:`Användarpaletter`."
 
 #: ../../source/palette.rst:46 cdc3e925e16e4ff6912b25e0d9080db2
 msgid ""
