--- a/Inkscape/Inkscapes nybörjarguide/pen-tool.po
+++ b/Inkscape/Inkscapes nybörjarguide/pen-tool.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-16 08:43+0200\n"
+"PO-Revision-Date: 2025-09-02 16:29+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -39,33 +39,32 @@ msgid ""
 "will become a good friend that you will enjoy to use for creating your "
 "illustrations."
 msgstr ""
-"När du använder det här verktyget för första gången kan det verka "
-"komplicerat, men mycket snart kommer det att bli en god vän som du kommer "
-"att tycka om att använda för att skapa dina illustrationer."
+"När du använder det här verktyget för första gången kan det verka komplicerat, "
+"men mycket snart kommer det att bli en god vän som du kommer att tycka om att "
+"använda för att skapa dina illustrationer."
 
 #: ../../source/pen-tool.rst:11 be1e41b8005e45669fba558ef2574ded
 msgid ""
-"This tool's purpose is to draw paths. Multiple paths, drawn next to and on "
-"top of each other, form a design. For a start:"
+"This tool's purpose is to draw paths. Multiple paths, drawn next to and on top "
+"of each other, form a design. For a start:"
 msgstr ""
 "Syftet med detta verktyg är att rita slingor. Flera slingor, som ritas bredvid "
 "och ovanpå varandra, bildar en design. Till att börja med:"
 
 #: ../../source/pen-tool.rst:14 3d7572d935774053923c1cc78d069ede
 msgid ""
-"Click with the left mouse button to create the first point (node) of the "
-"path."
+"Click with the left mouse button to create the first point (node) of the path."
 msgstr ""
 "Klicka med vänster musknapp för att skapa den första punkten (noden) på "
 "slingan."
 
 #: ../../source/pen-tool.rst:16 9f58f65fd0d44d128d7b9962e442324b
 msgid ""
-"Move the mouse and click again. Repeat this for as many nodes that you want "
-"to draw. All your nodes will be connected by straight lines (segments)."
+"Move the mouse and click again. Repeat this for as many nodes that you want to "
+"draw. All your nodes will be connected by straight lines (segments)."
 msgstr ""
 "Flytta musen och klicka igen. Upprepa detta för så många noder som du vill "
-"rita. Alla dina noder kommer att vara förbundna med raka linjer (segment)."
+"rita. Alla dina noder kommer att vara anslutna med raka linjer (segment)."
 
 #: ../../source/pen-tool.rst:19 d07d7d34d05442fcbcf46c9b40f66dd4
 msgid "To finish the path, right-click with the mouse."
@@ -78,8 +77,8 @@ msgid ""
 "directly, you can:"
 msgstr ""
 "Det är också möjligt att rita kurvor med detta verktyg. Varje nod som du "
-"skapar har två handtag. Dessa handtag definierar kurvans form. Om du vill "
-"rita en kurva direkt kan du göra följande:"
+"skapar har två handtag. Dessa handtag definierar kurvans form. Om du vill rita "
+"en kurva direkt kan du göra följande:"
 
 #: ../../source/pen-tool.rst:25 10fe4557cc5a4db78c0f9f96e68f438d
 msgid "Click with the left mouse button to position the first node."
@@ -104,33 +103,33 @@ msgid ""
 "The first method is predestined for creating precise drawings. First, you "
 "position the nodes, later, you can use the node tool to modify the path."
 msgstr ""
-"Den första metoden är predestinerad för att skapa exakta ritningar. Först "
+"Den första metoden är förutbestämd för att skapa exakta ritningar. Först "
 "positionerar du noderna, sedan kan du använda nodverktyget för att modifiera "
 "slingan."
 
 #: ../../source/pen-tool.rst:35 fbe195c3309e433dbacacb57dc2db488
 msgid ""
-"You'll be able to choose from several modes: Bézier, Spiro, BSpline, "
-"straight lines, paraxial (= only strictly parallel and perpendicular). Then, "
-"there is the :guilabel:`Shape` option that you have already learnt about in "
-"the chapter about the :doc:`Pencil tool <pencil-tool>`."
+"You'll be able to choose from several modes: Bézier, Spiro, BSpline, straight "
+"lines, paraxial (= only strictly parallel and perpendicular). Then, there is "
+"the :guilabel:`Shape` option that you have already learnt about in the chapter "
+"about the :doc:`Pencil tool <pencil-tool>`."
 msgstr ""
 "Du kommer att kunna välja mellan flera lägen: Bézier, Spiro, BSpline, raka "
 "linjer, paraxial (= endast strikt parallell och vinkelrät). Sedan finns "
-"det :guilabel:`Shape`-alternativet som du redan har lärt dig om i kapitlet "
+"det :guilabel:`Form`-alternativet som du redan har lärt dig om i kapitlet "
 "om :doc:`Blyertsverktyget <pencil-tool>`."
 
 #: ../../source/pen-tool.rst:41 0285ab12edc04c51addae8570e5954fe
 msgid ""
 "With some experience, you will learn how to place your nodes strategically. "
 "When a path contains too many nodes, this will make working with it more "
-"difficult. On the other hand, when there aren't enough of them, you will "
-"find that you have a lack of control when you are tweaking the path."
+"difficult. On the other hand, when there aren't enough of them, you will find "
+"that you have a lack of control when you are tweaking the path."
 msgstr ""
 "Med lite erfarenhet kommer du att lära dig att placera dina noder på ett "
-"strategiskt sätt. Om en slinga innehåller för många noder blir det svårare "
-"att arbeta med den. Å andra sidan, när det inte finns tillräckligt många, "
-"kommer du att upptäcka att du har bristande kontroll när du justerar slingan."
+"strategiskt sätt. Om en slinga innehåller för många noder blir det svårare att "
+"arbeta med den. Å andra sidan, när det inte finns tillräckligt många, kommer "
+"du att upptäcka att du har bristande kontroll när du justerar slingan."
 
 #: ../../source/pen-tool.rst:49 c38f628299ca46979e6838166feff142
 msgid "Using the Pen Tool"
@@ -138,11 +137,11 @@ msgstr "Använda pennverktyget"
 
 #: ../../source/pen-tool.rst:53 06d07d2c350242aeb03f58b47d130f37
 msgid ""
-"Every left-click adds a node. A long left-click drags out a node's handle "
-"and makes the segment curvy."
+"Every left-click adds a node. A long left-click drags out a node's handle and "
+"makes the segment curvy."
 msgstr ""
-"Varje vänsterklick lägger till en nod. Ett långt vänsterklick drar ut en "
-"nods handtag och gör segmentet kurvigt."
+"Varje vänsterklick lägger till en nod. Ett långt vänsterklick drar ut en nods "
+"handtag och gör segmentet kurvigt."
 
 #: ../../source/pen-tool.rst:56 020a9a2ac64e46fea7784e50068cf1ef
 msgid "Creating the rough shape"
@@ -153,7 +152,7 @@ msgid ""
 "Creating the rough shape with the Pen tool, without thinking too much about "
 "any curves. The nodes are represented as grey diamonds."
 msgstr ""
-"Skapar den grova formen med Pen-verktyget, utan att tänka så mycket på några "
+"Skapar den grova formen med Pennverktyget, utan att tänka så mycket på några "
 "kurvor. Noderna representeras av grå diamanter."
 
 #: ../../source/pen-tool.rst:63 c9c7ebf68ad14a56b1743b531a3809f7
@@ -166,7 +165,7 @@ msgid ""
 "Distribute dialog."
 msgstr ""
 "Noderna har justerats vertikalt och horisontellt med hjälp av dialogrutan "
-"Align-and-Distribute."
+"Justera och distribuera."
 
 #: ../../source/pen-tool.rst:70 df6053b371c0463c98ec64c85acb3a4d
 msgid "Segments have been curved"
@@ -177,8 +176,8 @@ msgid ""
 "The path has been modified by making the straight segments curved with the "
 "help of the node tool."
 msgstr ""
-"Slingan har modifierats genom att de raka segmenten har gjorts böjda med "
-"hjälp av nodverktyget."
+"Slingan har modifierats genom att de raka segmenten har gjorts böjda med hjälp "
+"av nodverktyget."
 
 #: ../../source/pen-tool.rst:77 affe0c960b12415e87359e62c0a142a4
 msgid "Some minor adjustments have been made"
@@ -186,8 +185,8 @@ msgstr "Några mindre justeringar har gjorts"
 
 #: ../../source/pen-tool.rst:81 5d345402ac1b475380528a984fe6f04d
 msgid ""
-"Some final adjustments have been made, to achieve a nice result. The image "
-"now resembles an open book."
+"Some final adjustments have been made, to achieve a nice result. The image now "
+"resembles an open book."
 msgstr ""
 "Några slutliga justeringar har gjorts för att uppnå ett bra resultat. Bilden "
 "ser nu ut som en öppen bok."
