--- a/Inkscape/Inkscapes nybörjarguide/tweak-tool.po
+++ b/Inkscape/Inkscapes nybörjarguide/tweak-tool.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 18:20+0200\n"
+"PO-Revision-Date: 2025-09-02 16:50+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../../source/tweak-tool.rst:3 c9b3f0a2caca46f49c5101404c629048
 msgid "The Tweak Tool"
-msgstr "Tweak-verktyget"
+msgstr "Finjusteringsverktyget"
 
 #: ../../source/tweak-tool.rst:5 fb7598436a0b42889d749593c21674f5
 msgid "|Icon for Tweak Tool| :kbd:`Shift` + :kbd:`F2` or :kbd:`W`"
@@ -31,7 +31,7 @@ msgstr "|Icon for Tweak Tool| :kbd:`Shift` + :kbd:`F2` eller :kbd:`W`"
 
 #: ../../source/tweak-tool.rst:77 4ea0f3d109c14c1397f78b938fc8d4c0
 msgid "Icon for Tweak Tool"
-msgstr "Ikon för Tweak Tool"
+msgstr "Ikon för Finjusteringsverktyget"
 
 #: ../../source/tweak-tool.rst:7 1b41d486411243e6a053a95d9f2f7097
 msgid ""
@@ -40,9 +40,9 @@ msgid ""
 "modify paths on the canvas, using numerous options, without ever "
 "switching tools."
 msgstr ""
-"Tweak-verktyget är det perfekta verktyget för illustratörer som först "
-"ritar sina mönster på papper och sedan skannar och vektoriserar sitt "
-"arbete. Med det kan du ändra slingor på duken med hjälp av många "
+"Finjusteringsverktyget är det perfekta verktyget för illustratörer som "
+"först ritar sina mönster på papper och sedan skannar och vektoriserar "
+"sitt arbete. Med det kan du ändra slingor på duken med hjälp av många "
 "alternativ utan att någonsin byta verktyg."
 
 #: ../../source/tweak-tool.rst:12 6dbda9791f794db4a63e16bf0f8676ac
@@ -53,9 +53,9 @@ msgid ""
 "tool over the canvas."
 msgstr ""
 "Eftersom verktyget endast fungerar på **markerade objekt** ska du först "
-"markera den slinga som du vill ändra. Byt sedan till **Tweak tool** och "
-"**klicka** på det område som du vill redigera, eller **klicka och dra** "
-"verktyget över duken."
+"markera den slinga som du vill ändra. Byt sedan till "
+"**Finjusteringsverktyg** och **klicka** på det område som du vill "
+"redigera, eller **klicka och dra** verktyget över duken."
 
 #: ../../source/tweak-tool.rst:14 9595ad418bd140d888e507db5e0c4fed
 msgid "First, let's have a look at its general options:"
@@ -95,9 +95,9 @@ msgid ""
 "tablet to dynamically change the force of the applied effect. However, "
 "the tool can be used well without a graphics tablet."
 msgstr ""
-"Aktivera den här knappen för att använda grafikplattans tryckkänslighet "
-"för att dynamiskt ändra kraften i den applicerade effekten. Verktyget "
-"kan dock användas även utan en grafikplatta."
+"Aktivera den här knappen för att använda ritplattans tryckkänslighet för "
+"att dynamiskt ändra kraften i den tillämpade effekten. Verktyget kan "
+"dock användas även utan en ritplatta."
 
 #: ../../source/tweak-tool.rst:29 56b3b0fa2bcc49acad223e2012c3e2ed
 msgid "Now let's look at the heart of the tool, its different modes:"
@@ -115,15 +115,16 @@ msgstr ""
 
 #: ../../source/tweak-tool.rst:81 09e9038979d24629a8e1a220ede3cfbd
 msgid "Icon for pushing objects with Tweak Tool"
-msgstr "Ikon för att skjuta objekt med Tweak Tool"
+msgstr "Ikon för att skjuta objekt med Finjusteringsverktyg"
 
 #: ../../source/tweak-tool.rst:83 306ea9b9ed7f481088a12025e034abd9
 msgid "Icon for attracting objects with Tweak Tool"
-msgstr "Ikon för att attrahera objekt med Tweak Tool"
+msgstr "Ikon för att attrahera objekt med Finjusteringsverktyg"
 
 #: ../../source/tweak-tool.rst:85 6b54f0abedb2499fb6814f819803c8d3
 msgid "Icon for moving objects randomly with Tweak Tool"
-msgstr "Ikon för slumpmässig förflyttning av objekt med Tweak Tool"
+msgstr ""
+"Ikon för slumpmässig förflyttning av objekt med Finjusteringsverktyg"
 
 #: ../../source/tweak-tool.rst:32 592bba71d1594cb5bf57c5ef4fc3b5a7
 msgid ""
@@ -137,12 +138,11 @@ msgstr ""
 
 #: ../../source/tweak-tool.rst:36 9324e42b73f341ca94a9a4cb1809a9e6
 msgid "|Icon for shrinking objects with Tweak Tool| Shrink/Grow objects"
-msgstr ""
-"|Icon for shrinking objects with Tweak Tool| Krympa/förstora objekt"
+msgstr "|Icon for shrinking objects with Tweak Tool| Krymp/förstora objekt"
 
 #: ../../source/tweak-tool.rst:87 06f8a4394df6425ea63fc6404064ee4b
 msgid "Icon for shrinking objects with Tweak Tool"
-msgstr "Ikon för krympning av objekt med Tweak Tool"
+msgstr "Ikon för krympning av objekt med Finjusteringsverktyg"
 
 #: ../../source/tweak-tool.rst:37 d58e00cebfc84a548471b40387734adb
 msgid ""
@@ -158,7 +158,7 @@ msgstr "|Icon for rotating objects with Tweak Tool| Rotera"
 
 #: ../../source/tweak-tool.rst:89 c1575d750dd449e08a44c49942ce7d3a
 msgid "Icon for rotating objects with Tweak Tool"
-msgstr "Ikon för att rotera objekt med Tweak Tool"
+msgstr "Ikon för att rotera objekt med Finjusteringsverktyg"
 
 #: ../../source/tweak-tool.rst:41 957a53134a3a4ff583f23a6c9ad6f0ec
 msgid "Rotates the paths."
@@ -170,7 +170,7 @@ msgstr "|Icon for duplicating objects with Tweak Tool| Duplicera"
 
 #: ../../source/tweak-tool.rst:91 06fda2004eb54e21a63e786db7639eab
 msgid "Icon for duplicating objects with Tweak Tool"
-msgstr "Ikon för duplicering av objekt med Tweak Tool"
+msgstr "Ikon för duplicering av objekt med Finjusteringsverktyg"
 
 #: ../../source/tweak-tool.rst:44 78a19aaad99940d39b74c710f7bfec91
 msgid ""
@@ -178,7 +178,7 @@ msgid ""
 "above the originals, so remember to move them, if you want to see the "
 "effect."
 msgstr ""
-"Skapar duplikat av de markerade slingorna. Dessa kommer att placeras "
+"Skapar dubbletter av de markerade slingorna. Dessa kommer att placeras "
 "direkt ovanför originalen, så kom ihåg att flytta dem om du vill se "
 "effekten."
 
@@ -189,7 +189,7 @@ msgstr ""
 
 #: ../../source/tweak-tool.rst:93 8fc0c8446c82494b81ce50c038399595
 msgid "Icon for pushing path parts with Tweak Tool"
-msgstr "Ikon för att flytta slingdelar med Tweak Tool"
+msgstr "Ikon för att flytta slingdelar med Finjusteringsverktyg"
 
 #: ../../source/tweak-tool.rst:48 5f6613e49dd74140a52d6c6dfae3726a
 msgid "Deforms the paths by pushing the nodes like a snow shovel."
@@ -201,16 +201,16 @@ msgid ""
 "|Icon for shrinking parts of paths with Tweak Tool| Shrink /|Icon for "
 "growing parts of paths with Tweak Tool| grow path parts"
 msgstr ""
-"|Icon for shrinking parts of paths with Tweak Tool| Krymp /|Icon for "
-"growing parts of paths with Tweak Tool| väx slingans delar"
+"|Icon for shrinking parts of paths with Tweak Tool| Gör slingans delar "
+"mindre /|Icon for growing parts of paths with Tweak Tool| större"
 
 #: ../../source/tweak-tool.rst:95 e1ae22ebfd2a40ae9bc82f2c11d68ff1
 msgid "Icon for shrinking parts of paths with Tweak Tool"
-msgstr "Ikon för att krympa delar av slingor med Tweak Tool"
+msgstr "Ikon för att krympa delar av slingor med Finjusteringsverktyg"
 
 #: ../../source/tweak-tool.rst:97 1be5390daf114f2e97c405acc5d0a92a
 msgid "Icon for growing parts of paths with Tweak Tool"
-msgstr "Ikon för att odla delar av vägar med Tweak Tool"
+msgstr "Ikon för att göra delar av slingor större med Filjusteringsverktyg"
 
 #: ../../source/tweak-tool.rst:51 40798b3f8dc640cda5cfc3ea02aad41e
 msgid ""
@@ -223,32 +223,31 @@ msgstr ""
 #: ../../source/tweak-tool.rst:54 36a8fd8fa15b49c29582cf0ab3bc93fd
 msgid "|Icon for roughening paths with Tweak Tool| Roughen path parts"
 msgstr ""
-"|Icon for roughening paths with Tweak Tool| Grovbearbetning av slingans "
-"delar"
+"|Icon for roughening paths with Tweak Tool| Förgrova slingans delar"
 
 #: ../../source/tweak-tool.rst:99 18dd50800eca4178a93283ff50dc53a1
 msgid "Icon for roughening paths with Tweak Tool"
-msgstr "Ikon för uppruggning av slingor med Tweak Tool"
+msgstr "Ikon för att förgrova slingor med Finjusteringsverktyg"
 
 #: ../../source/tweak-tool.rst:55 bfd7dde1e3f6413eb5539f1d639b9e49
 msgid "Roughens the contours of a path."
-msgstr "Grovar ut konturerna av en slinga."
+msgstr "Förgrovar konturerna av en slinga."
 
 #: ../../source/tweak-tool.rst:57 95f7d518394040198deb6cdc4251a3f6
 msgid ""
 "|Icon for painting objects with Tweak Tool| Paint color and |Icon for "
 "randomizing colors of objects with Tweak Tool| Jitter colors"
 msgstr ""
-"|Icon for painting objects with Tweak Tool|  Måla färg och |Icon for "
+"|Icon for painting objects with Tweak Tool|  Målarfärg och |Icon for "
 "randomizing colors of objects with Tweak Tool| Jitter-färger"
 
 #: ../../source/tweak-tool.rst:101 8d899e71240740b6b787acea4104af15
 msgid "Icon for painting objects with Tweak Tool"
-msgstr "Ikon för att måla objekt med Tweak Tool"
+msgstr "Ikon för att måla objekt med Finjusteringsverktyg"
 
 #: ../../source/tweak-tool.rst:103 136e22e338804e3d853cb44ccf1211bc
 msgid "Icon for randomizing colors of objects with Tweak Tool"
-msgstr "Ikon för att slumpa fram färger på objekt med Tweak Tool"
+msgstr "Ikon för att slumpa fram färger på objekt med Finjusteringsverktyg"
 
 #: ../../source/tweak-tool.rst:58 b8cb3dda3c4743d3a31bdd7b77b26bba
 msgid "These modes modify the color of the paths."
@@ -260,11 +259,11 @@ msgstr "|Icon for blurring objects with Tweak Tool| Gör oskarpa objekt"
 
 #: ../../source/tweak-tool.rst:105 16c4fd4c5efc46bfa360702712af81a9
 msgid "Icon for blurring objects with Tweak Tool"
-msgstr "Ikon för att göra objekt suddiga med Tweak Tool"
+msgstr "Ikon för att göra objekt oskarpa med Finjusteringsverktyg"
 
 #: ../../source/tweak-tool.rst:61 249a2f10f0cf4bcfa75df1cb1067fd6d
 msgid "Adds blur to the paths."
-msgstr "Lägger till oskärpa i slingorna."
+msgstr "Lägger till oskärpa till slingorna."
 
 #: ../../source/tweak-tool.rst:63 d840151bc315476c9643c9855f852113
 msgid "|Chameleon image to be tweaked|"
@@ -272,7 +271,7 @@ msgstr "|Chameleon image to be tweaked|"
 
 #: ../../source/tweak-tool.rst:107 57c73f84164e4c64ad3b97dcd409cba6
 msgid "Chameleon image to be tweaked"
-msgstr "Kameleont-image ska justeras"
+msgstr "Kameleontbild som ska finjusteras"
 
 #: ../../source/tweak-tool.rst:65 df19d962fee04963a7c130daa5ecaacc
 msgid ""
@@ -288,7 +287,7 @@ msgstr "|Chameleon tail editing with tweak tool|"
 
 #: ../../source/tweak-tool.rst:108 211adc4546d14c5fbcb21ff146071e68
 msgid "Chameleon tail editing with tweak tool"
-msgstr "Kameleontsvans redigerad med tweak-verktyg"
+msgstr "Kameleontsvans redigerad med finjusteringsverktyget"
 
 #: ../../source/tweak-tool.rst:70 47c77708f19c4100b32385fcc8b94fd8
 msgid ""
@@ -305,9 +304,9 @@ msgid ""
 "dangerous side."
 msgstr ""
 "|The chameleon's tongue is being roughened with Tweak Tool| En viss "
-"uppruggning har lagts till på tungan för att betona odjurets farliga "
+"förgrovning har lagts till på tungan för att betona odjurets farliga "
 "sida."
 
 #: ../../source/tweak-tool.rst:109 621d16e3e62145d39fc39eaec49a8b6c
 msgid "The chameleon's tongue is being roughened with Tweak Tool"
-msgstr "Kameleontens tunga ruggas upp med Tweak Tool"
+msgstr "Kameleontens tunga förgrovas med Finjusteringsverktyg"
