--- a/Inkscape/Inkscapes nybörjarguide/installing-on-mac.po
+++ b/Inkscape/Inkscapes nybörjarguide/installing-on-mac.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 18:37+0200\n"
+"PO-Revision-Date: 2025-09-02 16:16+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -60,8 +60,8 @@ msgid ""
 "computers, choose :guilabel:`dmg (arm64)`."
 msgstr ""
 "Beroende på processorarkitekturen på din Apple-dator väljer du nu den "
-"lämpliga Inkscape-diskavbildningsfilen (:term:`DMG <Diskavbildning (.dmg)>`) "
-"för ditt system. För de äldre, Intel-baserade Apple-datorerna väljer "
+"lämpliga Inkscape-diskavbildningsfilen (:term:`DMG <Disk Image (.dmg)>`) för "
+"ditt system. För de äldre, Intel-baserade Apple-datorerna väljer "
 "du :guilabel:`dmg (Intel)` och för de nyare, Arm64-baserade Apple-datorerna "
 "väljer du :guilabel:`dmg (arm64)`."
 
@@ -72,10 +72,10 @@ msgid ""
 "Downloads` from the menu bar in the Finder. Double-click the Inkscape DMG "
 "file to open it."
 msgstr ""
-"När nedladdningen är klar öppnar du mappen :file:`Hämtningar` i Finder. Du "
-"kan öppna den här mappen genom att välja :menuselection:`Gå --> Hämtningar` "
-"från menyraden i Finder. Dubbelklicka på Inkscape DMG-filen för att öppna "
-"den."
+"När nedladdningen är klar öppnar du mappen :file:`Hämtade filer` i Finder. "
+"Du kan öppna den här mappen genom att välja :menuselection:`Gå --> Hämtade "
+"filer` från menyraden i Finder. Dubbelklicka på Inkscape DMG-filen för att "
+"öppna den."
 
 #: ../../source/installing-on-mac.rst:37 ../../source/installing-on-mac.rst:112
 #: 39a9249c298b442a868736f598ff208a b70353dc35344a53acf3b996a7249e79
@@ -95,8 +95,8 @@ msgid ""
 "Finder."
 msgstr ""
 "Öppna Inkscape genom att dubbelklicka på dess ikon i "
-"mappen :guilabel:`Program`. Du kan öppna mappen :guilabel:`Program` genom "
-"att välja :menuselection:`Gå --> Program` från menyraden i Finder."
+"mappen :guilabel:`Program`. Du kan öppna mappen :guilabel:`Appar` genom att "
+"välja :menuselection:`Gå --> Appar` från menyraden i Finder."
 
 #: ../../source/installing-on-mac.rst:55 7a58fe7a7e81459ebf651d8107d9b09c
 msgid "Installing Inkscape on OS X 10.7 - 10.10"
@@ -133,9 +133,10 @@ msgid ""
 "Downloads` from the menu bar in the Finder. Double-click the XQuartz.dmg "
 "file to open it."
 msgstr ""
-"När nedladdningen är klar öppnar du mappen :file:`Hämtningar` i Finder. Du "
-"kan öppna den här mappen genom att välja :menuselection:`Gå --> Hämtningar` "
-"från menyraden i Finder. Dubbelklicka på filen XQuartz.dmg för att öppna den."
+"När nedladdningen är klar öppnar du mappen :file:`Hämtade filer` i Finder. "
+"Du kan öppna den här mappen genom att välja :menuselection:`Gå --> Hämtade "
+"filer` från menyraden i Finder. Dubbelklicka på filen XQuartz.dmg för att "
+"öppna den."
 
 #: ../../source/installing-on-mac.rst:79 8f0647af92f54678a53361cc68d4837b
 msgid ""
@@ -183,10 +184,10 @@ msgid ""
 "--> Downloads` from the menu bar in the Finder. Double-click the Inkscape "
 "DMG file to open it."
 msgstr ""
-"När nedladdningen är klar öppnar du mappen :file:`Hämtningar` i Finder. "
+"När nedladdningen är klar öppnar du mappen :file:`Hämtade filer` i Finder. "
 "Återigen kan du öppna den här mappen genom att välja :menuselection:`Gå --> "
-"Hämtningar` från menyraden i Finder. Dubbelklicka på Inkscape DMG-filen för "
-"att öppna den."
+"Hämtade filer` från menyraden i Finder. Dubbelklicka på Inkscape DMG-filen "
+"för att öppna den."
 
 #: ../../source/installing-on-mac.rst:120 dd83c5cb1a624dc590d821f4cc7e8ba4
 msgid "Step 3: Setting Up Inkscape"
@@ -225,7 +226,8 @@ msgstr ""
 #: ../../source/installing-on-mac.rst:151 ed8ddcab720141db96e317b315e1511c
 msgid "Click the Input tab, and configure its settings as shown here."
 msgstr ""
-"Klicka på fliken Input och konfigurera dess inställningar enligt bilden här."
+"Klicka på fliken Inmatning och konfigurera dess inställningar enligt bilden "
+"här."
 
 #: ../../source/installing-on-mac.rst:156 374b72f64d584bd19b0473b55aba2d98
 msgid "Click the Pasteboard tab, and configure its settings as shown here."
