--- a/Inkscape/Inkscapes nybörjarguide/interface.po
+++ b/Inkscape/Inkscapes nybörjarguide/interface.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 18:46+0200\n"
+"PO-Revision-Date: 2025-09-02 16:18+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -67,9 +67,9 @@ msgid ""
 "(:menuselection:`File --> Save`, :menuselection:`Edit --> Copy`, etc.). "
 "There are also Inkscape-specific items."
 msgstr ""
-"Programmets **menyfält** längst upp innehåller allmänna menyalternativ. "
-"Vissa liknar andra program (:menuselection:`File --> "
-"Save`, :menuselection:`Redigera --> Kopiera`, etc.). Det finns också "
+"Programmets **menyrad** längst upp innehåller allmänna menyalternativ. "
+"Vissa liknar andra program (:menuselection:`Arkiv --> "
+"Spara`, :menuselection:`Redigera --> Kopiera`, etc.). Det finns också "
 "Inkscape-specifika objekt."
 
 #: ../../source/interface.rst:28 e5bde89eee6c4ab69201c23d217fc8e3
@@ -77,7 +77,7 @@ msgid ""
 "The **tool controls bar** just below adjusts to the currently selected "
 "tool. It displays adjustable options for the currently selected tool."
 msgstr ""
-"Fältet **verktygskontroller** precis nedanför anpassar sig till det "
+"Fältet **verktygskontrollrad** precis nedanför anpassar sig till det "
 "aktuella verktyget. Den visar justerbara alternativ för det aktuella "
 "verktyget."
 
@@ -125,8 +125,8 @@ msgid ""
 "pressing :kbd:`%`."
 msgstr ""
 "I det övre högra hörnet finns en liten pil bredvid en magnetsymbol som "
-"ger dig tillgång till **snap-kontrollerna**. Vi föreslår att du "
-"avaktiverar snapping för tillfället om de är aktiva, genom att trycka på "
+"ger dig tillgång till **fästningskontrollerna**. Vi föreslår att du "
+"inaktiverar fästning för tillfället om de är aktiva, genom att trycka på "
 "magnetsymbolen eller genom att trycka på :kbd:`%`."
 
 #: ../../source/interface.rst:42 054d99d2a8e2498a9e67fc4b73bc87e9
@@ -135,7 +135,7 @@ msgid ""
 "with grid and guideline placement."
 msgstr ""
 "Det finns **linjaler** högst upp och till vänster på duken för att "
-"hjälpa till med placeringen av rutnät och riktlinjer."
+"hjälpa till med placeringen av rutnät och stödlinjer."
 
 #: ../../source/interface.rst:44 4d393f8f26514eb58217539a53cd921d
 msgid ""
