--- a/Inkscape/Inkscapes nybörjarguide/node-operations.po
+++ b/Inkscape/Inkscapes nybörjarguide/node-operations.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 18:31+0200\n"
+"PO-Revision-Date: 2025-09-02 16:24+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -31,17 +31,16 @@ msgstr "|Icon for Node Tool| :kbd:`F2` eller :kbd:`N`"
 
 #: ../../source/node-operations.rst:104 a2e9bb3a01a34327810ec73f4fef9076
 msgid "Icon for Node Tool"
-msgstr "Ikon för Node-verktyg"
+msgstr "Ikon för Nodverktyg"
 
 #: ../../source/node-operations.rst:7 f95afb6b127e48b69b237ef01bff2c0a
 msgid ""
-"The Node tool offers a number of options we haven't seen yet. In this chapter "
-"we will go through them, by looking at the different icons in its tool "
-"controls bar:"
+"The Node tool offers a number of options we haven't seen yet. In this chapter we "
+"will go through them, by looking at the different icons in its tool controls bar:"
 msgstr ""
-"Node-verktyget erbjuder ett antal alternativ som vi inte har sett än. I det "
-"här kapitlet går vi igenom dem genom att titta på de olika ikonerna i "
-"verktygets kontrollfält:"
+"Nodverktyget erbjuder ett antal alternativ som vi inte har sett än. I det här "
+"kapitlet går vi igenom dem genom att titta på de olika ikonerna i verktygets "
+"kontrollfält:"
 
 #: ../../source/node-operations.rst:11 30506bd892584179b924dc77367a5ebf
 msgid "|Icon for inserting nodes| Insert new node"
@@ -80,8 +79,8 @@ msgid ""
 "the objects in your drawing more quickly."
 msgstr ""
 "Välj nod(er) och använd sedan antingen :kbd:`Del`-tangenten eller den här "
-"knappen. Du bör sträva efter att ha så få noder som möjligt, så att du "
-"snabbare kan göra ändringar i objekten i din ritning."
+"knappen. Du bör sträva efter att ha så få noder som möjligt, så att du snabbare "
+"kan göra ändringar i objekten i din ritning."
 
 #: ../../source/node-operations.rst:23 ea6ec70da11f4f78a06e4176b173553e
 msgid "|Icon for merging nodes| Join (merge) nodes"
@@ -103,52 +102,51 @@ msgstr ""
 
 #: ../../source/node-operations.rst:28 60781071e6e7409e8c1720877600b32d
 msgid "|Icon for splitting nodes| Break path"
-msgstr "|Icon for splitting nodes| Bryt slinga"
+msgstr "|Icon for splitting nodes| Ta isär slinga"
 
 #: ../../source/node-operations.rst:112 58ba2691248a47a88c71175508d0d75a
 msgid "Icon for splitting nodes"
-msgstr "Ikon för delning av noder"
+msgstr "Ikon för att ta isär noder"
 
 #: ../../source/node-operations.rst:29 fd301f951c5f45e1bc0c213e59ec5813
 msgid ""
 "This will split one node into two nodes. These two new nodes are not connected "
 "by a path segment. The new nodes only have a single handle, as they are end "
-"nodes, and they are placed directly on top of each other. This can sometimes "
-"be difficult to handle. Only use this feature when you really need it!"
+"nodes, and they are placed directly on top of each other. This can sometimes be "
+"difficult to handle. Only use this feature when you really need it!"
 msgstr ""
-"Detta kommer att dela en nod i två noder. Dessa två nya noder är inte "
-"sammankopplade med ett vägsegment. De nya noderna har bara ett enda handtag, "
-"eftersom de är ändnoder och de placeras direkt ovanpå varandra. Detta kan "
-"ibland vara svårt att hantera. Använd bara den här funktionen när du verkligen "
-"behöver den!"
+"Detta kommer att ta isär en nod i två noder. Dessa två nya noder är inte "
+"sammankopplade med ett slingsegment. De nya noderna har bara ett enda handtag, "
+"eftersom de är ändnoder och de placeras direkt ovanpå varandra. Detta kan ibland "
+"vara svårt att hantera. Använd bara den här funktionen när du verkligen behöver "
+"den!"
 
 #: ../../source/node-operations.rst:34 01bc8b2c31b4437cb6e0696bd11a63c6
 msgid "|Icon for joining nodes with a segment| Join end nodes with a new segment"
 msgstr ""
-"|Icon for joining nodes with a segment| Sammanfoga slutnoder med ett nytt "
-"segment"
+"|Icon for joining nodes with a segment| Anslut slutnoder med ett nytt segment"
 
 #: ../../source/node-operations.rst:114 120e9d01517d4db69ce530b163e7a70c
 msgid "Icon for joining nodes with a segment"
-msgstr "Ikon för att sammanfoga noder med ett segment"
+msgstr "Ikon för att ansluta noder med ett segment"
 
 #: ../../source/node-operations.rst:35 40e91568190c47d1847db378b6143df0
 msgid ""
-"This is ideal for manually joining separate path pieces. If you select all "
-"nodes in a path that has many interruptions, this will always join the two "
-"nodes that are closest to each other."
+"This is ideal for manually joining separate path pieces. If you select all nodes "
+"in a path that has many interruptions, this will always join the two nodes that "
+"are closest to each other."
 msgstr ""
-"Detta är perfekt för att manuellt sammanfoga separata delar av en slinga. Om du "
+"Detta är perfekt för att manuellt ansluta separata delar av en slinga. Om du "
 "väljer alla noder i en slinga med många avbrott kommer den här funktionen alltid "
-"att sammanfoga de två noder som ligger närmast varandra."
+"att ansluta de två noder som ligger närmast varandra."
 
 #: ../../source/node-operations.rst:37 c129fe651c2142058dfd9befe706f8ee
 msgid ""
 "|Icon for deleting a segment between two nodes| Delete segment between two non-"
 "end nodes"
 msgstr ""
-"|Icon for deleting a segment between two nodes| Ta bort segment mellan två "
-"noder som inte är ändnoder"
+"|Icon for deleting a segment between two nodes| Ta bort segment mellan två noder "
+"som inte är ändnoder"
 
 #: ../../source/node-operations.rst:116 169f991244574c00a0f4a15b3af5e8ce
 msgid "Icon for deleting a segment between two nodes"
@@ -156,30 +154,29 @@ msgstr "Ikon för att ta bort ett segment mellan två noder"
 
 #: ../../source/node-operations.rst:38 a32cf85ff2a6416284d72a7327af2fa7
 msgid "Breaks a path in two, leaving a gap."
-msgstr "Bryter en slinga i två delar och lämnar en lucka."
+msgstr "Tar isär en slinga i två delar och lämnar en lucka."
 
 #: ../../source/node-operations.rst:40 80f5bc6256014f4d98a40f87e52937f4
 msgid ""
 "The next couple of icons can be used to **convert** one thing into a different "
 "one:"
-msgstr ""
-"Nästa par ikoner kan användas för att **konvertera** en sak till en annan:"
+msgstr "Nästa par ikoner kan användas för att **konvertera** en sak till en annan:"
 
 #: ../../source/node-operations.rst:43 1c1fc61024a44e89bff3a27cfd618db6
 msgid ""
 "|Cusp node icon| |Smooth node icon| |Symmetric node icon| |Auto-smooth node "
 "icon| Convert different node types into each other"
 msgstr ""
-"| Ikon för kuspnod | Ikon för slät nod | Ikon för symmetrisk nod | Ikon för "
-"automatisk slät nod | Konvertera olika nodtyper till varandra"
+"|Cusp node icon| |Smooth node icon| |Symmetric node icon| |Auto-smooth node "
+"icon| Konvertera olika nodtyper till varandra"
 
 #: ../../source/node-operations.rst:118 39c8e979f27d41779172b342706a48ab
 msgid "Cusp node icon"
-msgstr "Ikon för cusp-nod"
+msgstr "Ikon för spetsnod"
 
 #: ../../source/node-operations.rst:120 195e4c02389c4b7b8598628feb6d413b
 msgid "Smooth node icon"
-msgstr "Mjuk nodikon"
+msgstr "Slät nodikon"
 
 #: ../../source/node-operations.rst:122 a9f446f103e14d0b8243a959b25e92da
 msgid "Symmetric node icon"
@@ -187,7 +184,7 @@ msgstr "Symbol för symmetrisk nod"
 
 #: ../../source/node-operations.rst:124 218ed292399f4fd78cfe01be9701ba1b
 msgid "Auto-smooth node icon"
-msgstr "Automatisk utjämning av nodens ikon"
+msgstr "Ikon för automatisk utjämning av nod"
 
 #: ../../source/node-operations.rst:44 9be00e079e5a448b8b885a7159a02846
 msgid "see :doc:`chapter 'About Node Types' <node-types>`"
@@ -206,12 +203,12 @@ msgid ""
 "We learn about this in the :doc:`chapter about how to edit the nodes on a "
 "geometrical shape <objects-to-paths>`"
 msgstr ""
-"Vi lär oss mer om detta i :doc:`-kapitlet om hur man redigerar noderna på en "
+"Vi lär oss mer om detta i :doc:-`kapitlet om hur man redigerar noderna på en "
 "geometrisk form <objects-to-paths>`"
 
 #: ../../source/node-operations.rst:49 f46c559be99e432ca9978c63bddb2bb0
 msgid "|Icon for converting strokes to paths| Convert stroke to path"
-msgstr "|Icon for converting strokes to paths| Konvertera stroke till path"
+msgstr "|Icon for converting strokes to paths| Konvertera streck till slinga"
 
 #: ../../source/node-operations.rst:128 1ec799b1c4ff47a1956ab07dfe284605
 msgid "Icon for converting strokes to paths"
@@ -232,8 +229,8 @@ msgstr ""
 
 #: ../../source/node-operations.rst:56 ad7d617332c54e659d89825a8a9c47f7
 msgid ""
-"These buttons determine if certain path properties will be editable and "
-"visible on the canvas:"
+"These buttons determine if certain path properties will be editable and visible "
+"on the canvas:"
 msgstr ""
 "Dessa knappar avgör om vissa slingegenskaper ska vara redigerbara och synliga på "
 "duken:"
@@ -243,9 +240,8 @@ msgid ""
 "|Show clip icon| |Show mask icon| |Show LPE parameter icon| |Show transform "
 "handles icon| |Show Bezier handles icon| |Show outline icon|"
 msgstr ""
-"| Visa klippikon | Visa maskikon | Visa ikon för LPE-parameter | Visa ikon för "
-"transformationshandtag | Visa ikon för Bezier-handtag | Visa ikon för kontur | "
-"Visa ikon för kontur"
+"|Show clip icon| |Show mask icon| |Show LPE parameter icon| |Show transform "
+"handles icon| |Show Bezier handles icon| |Show outline icon|"
 
 #: ../../source/node-operations.rst:130 a1f3d7bd2ada4728a1c5e260f4ddc5a5
 msgid "Show clip icon"
@@ -288,7 +284,7 @@ msgid ""
 "A stroke was added, and another node. This node was broken into two. This one "
 "looks a lot smaller. Make sure you really want this before clicking the button!"
 msgstr ""
-"En stroke lades till, och ytterligare en nod. Den här noden delades i två. Den "
+"En streck lades till och ytterligare en nod. Den här noden delades i två. Den "
 "här ser mycket mindre ut. Se till att du verkligen vill ha det här innan du "
 "klickar på knappen!"
 
@@ -306,7 +302,7 @@ msgstr "Före redigering"
 
 #: ../../source/node-operations.rst:88 a83f91b0ee54417b960caccd4a3f9920
 msgid "Example of editing a path by …"
-msgstr "Exempel på redigering av en slinga genom …"
+msgstr "Exempel på redigering av en slinga genom att …"
 
 #: ../../source/node-operations.rst:90 6fa2cb95218b480fb13d33de6e1fb3f9
 msgid "Moving a node"
