--- a/Inkscape/Inkscapes nybörjarguide/pencil-tool.po
+++ b/Inkscape/Inkscapes nybörjarguide/pencil-tool.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-16 08:43+0200\n"
+"PO-Revision-Date: 2025-09-02 16:37+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../../source/pencil-tool.rst:3 f28e4d08c53543dda6a01b09a5da15ca
 msgid "The Pencil Tool"
-msgstr "Blyertsverktyget"
+msgstr "Verktyget Blyertspenna"
 
 #: ../../source/pencil-tool.rst:5 9069c4efab4244159752225af1464058
 msgid "|Icon for Pencil Tool| :kbd:`F6` or :kbd:`P`"
@@ -31,21 +31,21 @@ msgstr "|Icon for Pencil Tool| :kbd:`F6` or :kbd:`P`"
 
 #: ../../source/pencil-tool.rst:152 1e6afc301656484bb7349ae41aae8c92
 msgid "Icon for Pencil Tool"
-msgstr "Ikon för blyertsverktyg"
+msgstr "Ikon för verktyget Blyertspenna"
 
 #: ../../source/pencil-tool.rst:7 7cbee27ae8174c72ab30b24b27d067b5
 msgid ""
 "The behavior of the Pencil tool depends on the settings in its controls bar. To "
 "draw with this tool, press the left mouse button and drag the mouse around the "
 "canvas. The Pencil will leave a green trace that follows the location of the "
-"mouse cursor. When you let go of the mouse button, the shape you created will "
-"get its stroke (and/or its fill, if you have one set)."
+"mouse cursor. When you let go of the mouse button, the shape you created will get "
+"its stroke (and/or its fill, if you have one set)."
 msgstr ""
-"Hur verktyget Blyertspenna fungerar beror på inställningarna i dess "
-"kontrollfält. För att rita med detta verktyg trycker du på vänster musknapp och "
-"drar musen runt målarduken. Pencil lämnar ett grönt spår som följer muspekarens "
-"position. När du släpper musknappen får den form du skapade sitt streck (och/"
-"eller sin fyllning, om du har ställt in en sådan)."
+"Hur verktyget Blyertspenna fungerar beror på inställningarna i dess kontrollfält. "
+"För att rita med detta verktyg trycker du på vänster musknapp och drar musen runt "
+"duken. Blyertspenna lämnar ett grönt spår som följer muspekarens position. När du "
+"släpper musknappen får den form du skapade sitt streck (och/eller sin fyllning, "
+"om du har ställt in en sådan)."
 
 #: ../../source/pencil-tool.rst:14 f35a6c44921e4b2cb1f6c0b63b502134
 msgid ""
@@ -64,7 +64,7 @@ msgid ""
 "Let's have a look at the options of the Pencil tool. The :guilabel:`Shape` "
 "dropdown menu offers different brushes that influence the shape of the path:"
 msgstr ""
-"Låt oss ta en titt på alternativen för Blyertspenna-verktyget. I "
+"Låt oss ta en titt på alternativen för verktyget Blyertspenna. I "
 "rullgardinsmenyn :guilabel:`Form` finns olika penslar som påverkar slingans form:"
 
 #: ../../source/pencil-tool.rst:23 90101786261b49f1a1912e7b7be46cb9
@@ -87,12 +87,12 @@ msgstr "Ellips"
 
 #: ../../source/pencil-tool.rst:29 cce4501cc4e34122be3a4f56c2d6342e
 msgid ""
-"The beginning and end of the path will be thinner than its middle part. Switch "
-"to the Node tool and drag on the round white handle to adjust the width "
+"The beginning and end of the path will be thinner than its middle part. Switch to "
+"the Node tool and drag on the round white handle to adjust the width "
 "interactively."
 msgstr ""
 "Början och slutet av slingan kommer att vara tunnare än dess mittdel. Byt till "
-"Node-verktyget och dra i det runda vita handtaget för att justera bredden "
+"Nodverktyget och dra i det runda vita handtaget för att justera bredden "
 "interaktivt."
 
 #: ../../source/pencil-tool.rst:33 38ce1b221f8846e5aad4db49e131dd52
@@ -116,12 +116,12 @@ msgstr "Böj från urklipp"
 #: ../../source/pencil-tool.rst:40 6f0229f1045d48a0a2a85051fa523404
 msgid ""
 "First you must copy a curve that already exists. The line that you draw will be "
-"deformed like the path that you copied. And it will be adjustable, using the "
-"Node tool."
+"deformed like the path that you copied. And it will be adjustable, using the Node "
+"tool."
 msgstr ""
 "Först måste du kopiera en kurva som redan finns. Linjen som du ritar kommer att "
-"deformeras som den slinga som du kopierade. Och den kommer att vara justerbar "
-"med hjälp av Nodverktyget."
+"deformeras som den slinga som du kopierade. Och den kommer att vara justerbar med "
+"hjälp av Nodverktyget."
 
 #: ../../source/pencil-tool.rst:44 411b779e4bad40a2a0ba8e5999daa271
 msgid "Last applied"
@@ -131,12 +131,12 @@ msgstr "Senast tillämpad"
 msgid ""
 "Use the same shape you used last time. Use this if you want to continue using a "
 "custom shape, for drawing multiple lines with the same style. This way, you can "
-"go back to using the clipboard normally. It does no longer have to hold the "
-"shape you want to draw."
+"go back to using the clipboard normally. It does no longer have to hold the shape "
+"you want to draw."
 msgstr ""
 "Använd samma form som du använde förra gången. Använd detta om du vill fortsätta "
-"att använda en anpassad form för att rita flera linjer med samma stil. På så "
-"sätt kan du återgå till att använda urklippet normalt. Det behöver inte längre "
+"att använda en anpassad form för att rita flera linjer med samma stil. På så sätt "
+"kan du återgå till att använda urklippet normalt. Det behöver inte längre "
 "innehålla den form som du vill rita."
 
 #: ../../source/pencil-tool.rst:50 0486efc1ac364d74bb3569fdde6ca808
@@ -157,11 +157,11 @@ msgid ""
 "look less scrawly. When you use a graphics tablet with pen, you can use a lower "
 "smoothing value, and it will still look nice."
 msgstr ""
-"Du kan ställa in hur mycket :guilabel:`Mjukhet` som ska användas för den slinga "
+"Du kan ställa in hur mycket :guilabel:`Utjämning` som ska användas för den slinga "
 "du vill rita. När du använder en mus för att rita kommer linjen att se mindre "
 "skrovlig ut om du gör detta värde större. När du använder en ritplatta med penna "
-"kan du använda ett lägre utjämningsvärde och det kommer fortfarande att se "
-"snyggt ut."
+"kan du använda ett lägre utjämningsvärde och det kommer fortfarande att se snyggt "
+"ut."
 
 #: ../../source/pencil-tool.rst:59 0b18cf9116b84d9ea6ccb2883093407f
 msgid ""
@@ -169,13 +169,13 @@ msgid ""
 "interactive simplify` allows you to draw a path where you can adjust the "
 "smoothing after you have finished drawing the path. Use the button |Icon for LPE "
 "simplify flatten|:guilabel:`LPE simplify flatten` to lock the result of the "
-"interactive smoothing. After it has been used, the path's smoothing can no "
-"longer be adjusted."
+"interactive smoothing. After it has been used, the path's smoothing can no longer "
+"be adjusted."
 msgstr ""
-"Knappen |Icon for LPE based interactive simplify|:guilabel:`LPE based "
-"interactive simplify` låter dig rita en slinga där du kan justera utjämningen "
+"Knappen |Icon for LPE based interactive simplify|:guilabel:`LPE-baserad "
+"interaktiv förenkling` låter dig rita en slinga där du kan justera utjämningen "
 "efter att du har ritat slingan. Använd knappen |Icon for LPE simplify "
-"flatten|:guilabel:`LPE simplify flatten` för att låsa resultatet av den "
+"flatten|:guilabel:`LPE förenklad utplattning` för att låsa resultatet av den "
 "interaktiva utjämningen. Efter att den har använts kan slingans utjämning inte "
 "längre justeras."
 
@@ -185,7 +185,7 @@ msgstr "Ikon för LPE-baserad interaktiv förenkling"
 
 #: ../../source/pencil-tool.rst:156 de7d79f0541a4bafb853aec6d6b39497
 msgid "Icon for LPE simplify flatten"
-msgstr "Ikon för LPE förenkla plana ut"
+msgstr "Ikon för LPE förenklad utplattning"
 
 #: ../../source/pencil-tool.rst:65 00044042bbf3481a94a0eaa15b0ecc45
 msgid ""
@@ -216,7 +216,7 @@ msgstr ""
 
 #: ../../source/pencil-tool.rst:75 2150f5e8746648b3b2db7e26d69c90f7
 msgid "|Icon for Bezier path| Create regular Bézier path"
-msgstr "|Icon for Bezier path| Create regular Bézier path"
+msgstr "|Icon for Bezier path| Skapa vanlig Bézier-slinga"
 
 #: ../../source/pencil-tool.rst:170 b31fdf016b7f413e821131bd042ec6bc
 msgid "Icon for Bezier path"
@@ -234,11 +234,11 @@ msgstr ""
 
 #: ../../source/pencil-tool.rst:78 d44e8802926e4d98a94886a8a89a02b2
 msgid "|Icon for Spiro path| Create Spiro path"
-msgstr "|Icon for Spiro path| Create Spiro path"
+msgstr "|Icon for Spiro path| Skapa Spiro-slinga"
 
 #: ../../source/pencil-tool.rst:172 803ae1dbae7a428cb40c1bfd848b52a1
 msgid "Icon for Spiro path"
-msgstr "Ikon för Spiro-väg"
+msgstr "Ikon för Spiro-slinga"
 
 #: ../../source/pencil-tool.rst:79 80a500a081354955a219bd6e27e4567c
 msgid "Create stylish swirls and curls with only the mouse!"
@@ -246,11 +246,11 @@ msgstr "Skapa snygga virvlar och lockar med bara musen!"
 
 #: ../../source/pencil-tool.rst:81 331b9715203c46c3a0ad485d7484312b
 msgid "|Icon for BSpline path| Create BSpline path"
-msgstr "|Icon for BSpline path| Create BSpline path"
+msgstr "|Icon for BSpline path| Skapa BSpline-slinga"
 
 #: ../../source/pencil-tool.rst:174 d2eb39770afb40e6b363e7c283f62a4d
 msgid "Icon for BSpline path"
-msgstr "Ikon för BSpline-väg"
+msgstr "Ikon för BSpline-slinga"
 
 #: ../../source/pencil-tool.rst:82 57826f91a08e4639b4158ba4fa505eac
 msgid ""
@@ -264,17 +264,17 @@ msgstr ""
 msgid ""
 "The Pencil tool (as well as the Pen tool) creates **dots** when you hold "
 "down :kbd:`Ctrl` while clicking on the canvas. When you hold down "
-"both :kbd:`Shift` + :kbd:`Ctrl`, the dots' size will be doubled. "
-"With :kbd:`Ctrl` + :kbd:`Alt`, random sized small dots will be created with "
-"every click, and with :kbd:`Shift` + :kbd:`Ctrl` + :kbd:`Alt`, each click will "
-"generate a random sized big dot."
+"both :kbd:`Shift` + :kbd:`Ctrl`, the dots' size will be doubled. With :kbd:`Ctrl` "
+"+ :kbd:`Alt`, random sized small dots will be created with every click, and "
+"with :kbd:`Shift` + :kbd:`Ctrl` + :kbd:`Alt`, each click will generate a random "
+"sized big dot."
 msgstr ""
 "Blyertsverktyget (liksom Pennaverktyget) skapar **prickar** när du håller "
 "ned :kbd:`Ctrl` samtidigt som du klickar på duken. När du håller ner "
 "både :kbd:`Shift` + :kbd:`Ctrl` kommer prickarnas storlek att fördubblas. "
-"Med :kbd:`Ctrl` + :kbd:`Alt` kommer slumpmässigt valda små prickar att skapas "
-"vid varje klick, och med :kbd:`Shift` + :kbd:`Ctrl` + :kbd:`Alt` kommer varje "
-"klick att generera en slumpmässigt vald stor prick."
+"Med :kbd:`Ctrl` + :kbd:`Alt` kommer slumpmässigt valda små prickar att skapas vid "
+"varje klick, och med :kbd:`Shift` + :kbd:`Ctrl` + :kbd:`Alt` kommer varje klick "
+"att generera en slumpmässigt vald stor prick."
 
 #: ../../source/pencil-tool.rst:92 ad9c4d26de3748b39b4aaec757d0663b
 msgid "Note that the dots are really circles."
@@ -305,11 +305,11 @@ msgstr "|A path drawn with Shape: Ellipse and no smoothing|"
 
 #: ../../source/pencil-tool.rst:159 723f22b25f0c4c6a84114dc3930a838e
 msgid "A path drawn with Shape: Ellipse and no smoothing"
-msgstr "En slinga ritad med Shape: Ellipse och ingen utjämning"
+msgstr "En slinga ritad med Form: Ellips och ingen utjämning"
 
 #: ../../source/pencil-tool.rst:102 a1b3a256f3bf41ea8c51c4befba4d5d2
 msgid "A path drawn with Shape: Ellipse and no smoothing."
-msgstr "En slinga ritad med Shape: Ellipse och ingen utjämning."
+msgstr "En slinga ritad med Form: Ellips och ingen utjämning."
 
 #: ../../source/pencil-tool.rst:104 a8058992d09d40fbb1127ebb4e601bd2
 msgid "|The path has been extended from the square handle at its end.|"
@@ -350,7 +350,7 @@ msgstr "|Path with Shape: From Clipboard|"
 
 #: ../../source/pencil-tool.rst:163 a6b5e5649c064a779316bb54ec13bceb
 msgid "Path with Shape: From Clipboard"
-msgstr "Slinga med form: Från klippbordet"
+msgstr "Slinga med form: Från urklipp"
 
 #: ../../source/pencil-tool.rst:118 6b744f64360c40038f22121e6e75d5ab
 msgid "This path uses Shape: From Clipboard"
@@ -374,7 +374,7 @@ msgstr "|Path with Shape: Triangle In, Bézier mode, smoothing set to 40|"
 
 #: ../../source/pencil-tool.rst:165 4bd7d28c870345a7abdeaa2b204f61d7
 msgid "Path with Shape: Triangle In, Bézier mode, smoothing set to 40"
-msgstr "Slinga med Form: Triangle In, Bézier-läge, utjämning inställd på 40"
+msgstr "Slinga med Form: Triangel in, Bézier-läge, utjämning inställd på 40"
 
 #: ../../source/pencil-tool.rst:126 f97901b891844d05948a2a455bc74e05
 msgid "Path drawn with Shape: Triangle In in Bézier mode, with a smoothing of 40"
@@ -401,7 +401,7 @@ msgstr "Slingan ritad i Spiro-läge med Form: Från urklipp"
 msgid ""
 "Path with Shape: From Clipboard drawn in Spiro mode with a smoothing level of 40"
 msgstr ""
-"Slinga med Form: Från klippbordet ritat i Spiro-läge med en utjämningsnivå på 40"
+"Slinga med Form: Från urklipp ritat i Spiro-läge med en utjämningsnivå på 40"
 
 #: ../../source/pencil-tool.rst:138 4a1003bedc854aa9a7634edd36577f17
 msgid "|The width of the path can be changed with the white circular handle.|"
@@ -414,19 +414,18 @@ msgstr "Slingans bredd kan ändras med det vita cirkelformade handtaget."
 #: ../../source/pencil-tool.rst:140 58dbade951954ffd84c70961380ea2db
 msgid ""
 "The same path as above, only wider. The width of a path that uses objects on the "
-"clipboard (and those that use 'Shape: Ellipse', both use the 'Pattern along "
-"Path' Live Path Effect) can be changed with the Node tool, using the white "
-"circular handle at the beginning of the path."
+"clipboard (and those that use 'Shape: Ellipse', both use the 'Pattern along Path' "
+"Live Path Effect) can be changed with the Node tool, using the white circular "
+"handle at the beginning of the path."
 msgstr ""
-"Samma slinga som ovan, fast bredare. Bredden på en slinga som använder objekt på "
-"klippbordet (och de som använder 'Form: Ellips', som båda använder Live Path "
-"Effect 'Mönster längs slinga') kan ändras med Nodverktyget, med hjälp av det "
-"vita cirkulära handtaget i början av slingan."
+"Samma slinga som ovan, fast bredare. Bredden på en slinga som använder objekt i "
+"urklipp (och de som använder 'Form: Ellips', som båda använder direkta "
+"slingeffekten 'Mönster längs slinga') kan ändras med Nodverktyget, med hjälp av "
+"det vita cirkulära handtaget i början av slingan."
 
 #: ../../source/pencil-tool.rst:145 b266a0ab819446f59a32579741bf7b70
 msgid "|The width of the path can be changed with the pink diamond-shaped handle.|"
-msgstr ""
-"|The width of the path can be changed with the pink diamond-shaped handle.|"
+msgstr "|The width of the path can be changed with the pink diamond-shaped handle.|"
 
 #: ../../source/pencil-tool.rst:169 9edb771dbeef46e6882a6018136bf7bb
 msgid "The width of the path can be changed with the pink diamond-shaped handle."
@@ -434,10 +433,10 @@ msgstr "Slingans bredd kan ändras med det rosa diamantformade handtaget."
 
 #: ../../source/pencil-tool.rst:148 b53276e83aee47198f46f39af2d4e1de
 msgid ""
-"The width of a path with a PowerStroke Live Path Effect (used by 'Shape: "
-"Triangle In / Out') can be adjusted with the node tool by moving a pink, diamond-"
-"shaped node, to achieve a non-constant path width."
+"The width of a path with a PowerStroke Live Path Effect (used by 'Shape: Triangle "
+"In / Out') can be adjusted with the node tool by moving a pink, diamond-shaped "
+"node, to achieve a non-constant path width."
 msgstr ""
-"Bredden på en slinga med en PowerStroke Live Path Effect (som används av 'Form: "
-"Triangel in / ut') kan justeras med nodverktyget genom att flytta en rosa, "
+"Bredden på en slinga med en direkta slingeffekten Kraftstreck (som används av "
+"'Form: Triangel in / ut') kan justeras med nodverktyget genom att flytta en rosa, "
 "diamantformad nod för att uppnå en icke-konstant slingbredd."
